[b]Version 0.6.6[/b]:

(2008-11-15)
 * Added a new action to select the next aspect ratio. Assigned by default to
   key "A". Unfortunately this change breaks compatibility and the aspect
   ratio setting for all your played videos will be lost.
 * Display the text for the statusbar in the OSD if in fullscreen mode (and
   not paused).

(2008-11-14)
 * Added the new section Advanced->Proxy in preferences to configure the 
   proxy.

(2008-11-13)
 * Added some options in smplayer.ini (section [proxy]) to configure a proxy 
   for internet connections. Untested.


[b]Version 0.6.5.1[/b]:

(2008-11-12)
 * Don't pass to mplayer the option -no-correct-pts or -nocorrect-pts if
   the mplayer version is still unknown. Prevents mplayer to fail on the first
   run, complaining about an unknown -no-correct-pts if using a recent version 
   of mplayer (r26842 or above).


[b]Version 0.6.5[/b]:

(2008-11-11)
 * (Linux) Now smplayer tries to follow the XDG Base Directory Specification
   (http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html)
   for the config files. So now smplayer will save its config files under
   the directory $XDG_CONFIG_HOME/smplayer or $HOME/.config/smplayer if
   $XDG_CONFIG_HOME is not defined.
   If you want to keep your preferences, copy the files in $HOME/.smplayer to
   $HOME/.config/smplayer

(2008-11-07)
 * Added a new option "Floating control" in Preferences->Interface. It allows
   to configure the floating control (width, margin...).

(2008-11-06)
 * (Experimental) Added the possibility to select the adaptor for xv. Requires
   at least MPlayer SVN r26762 (from 2008-05-13).

(2008-11-05)
 * Added support for another patch: 
   http://smplayer.svn.sourceforge.net/viewvc/smplayer/mplayer-builds/patches/id_exit.diff
   This patch allows the playlist to work properly even if the output messages 
   of mplayer are not in English.
 * New option for smplayer.ini: bypass_window_manager (section 